--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,3 +1,7 @@
 bin_PROGRAMS = test_strlist 
-test_strlist_SOURCES = test_strlist.c
-test_strlist_LDADD = -lcheck
+test_strlist_SOURCES 	= test_strlist.c ../src/strlist.c
+test_strlist_LDADD 	= -ll -lcheck
+
+AM_CPPFLAGS		= -I$(top_srcdir)/src
+
+TESTS 			= test_strlist
