--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,12 @@
 lib_LTLIBRARIES 	= libnss_exfiles.la
-libnss_exfiles_la_SOURCES = conf_parser.y conf_lexer.l nss_exfiles.c nss_exfiles.h split.c split.h strlist.c strlist.h 
+libnss_exfiles_la_SOURCES = conf_parser.y 		\
+			    conf_lexer.l 		\
+			    nss_exfiles.c 		\
+			    nss_exfiles.h 		\
+			    strsplit.c 			\
+			    strsplit.h 			\
+			    strlist.c 			\
+			    strlist.h 
 libnss_exfiles_la_LDFLAGS = -version-info 2:0:0
 
 AM_YFLAGS = -d
