--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = test_strlist test_strsplit
+bin_PROGRAMS = test_strlist test_strsplit test_exfiles_pwd
 
 test_strlist_SOURCES 	= test_strlist.c 		\
 			  ../src/strlist.c 		\
@@ -11,6 +11,10 @@ test_strsplit_SOURCES	= test_strsplit.c 		\
 			  ../src/strsplit.h
 test_strsplit_LDADD	= -lcheck
 
+test_exfiles_pwd_SOURCES = test_exfiles_pwd.c
+
+test_exfiles_pwd_LDADD	= -lcheck -ldl
+
 AM_CPPFLAGS		= -I$(top_srcdir)/src
 
-TESTS 			= test_strlist test_strsplit
+TESTS 			= test_strlist test_strsplit test_exfiles_pwd
