--- a/configure.in
+++ b/configure.in
@@ -5,7 +5,7 @@ AC_PREREQ(2.59)
 AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
 AC_CONFIG_AUX_DIR(config)
 AM_INIT_AUTOMAKE(nss_exfiles, 1.0)
-AC_CONFIG_SRCDIR([src/split.c])
+AC_CONFIG_SRCDIR([src/])
 AC_CONFIG_HEADER([config.h])
 
 # Checks for programs.
