--- a/configure.in
+++ b/configure.in
@@ -8,6 +8,19 @@ AM_INIT_AUTOMAKE(nss_exfiles, 1.0)
 AC_CONFIG_SRCDIR([src/])
 AC_CONFIG_HEADER([config.h])
 
+AC_ARG_ENABLE(trace, 
+              AS_HELP_STRING([--enable-trace],
+                             [enable tracing (default is NO) ])
+             )
+dnl Tracing enabled?
+if test -n "$enable_trace"; then
+    enable_trace=${enable_trace_default-no}
+fi
+if test "$enable_trace" = no; then
+    AC_DEFINE([ENABLE_TRACE], [], [Enable tracing])
+fi
+
+
 # Checks for programs.
 AC_PROG_LIBTOOL
 AC_PROG_YACC
