Remove strlist implementation
* 'strlist' implementation is no longer used, so remote it

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,15 +1,8 @@
-bin_PROGRAMS 		= test_strlist 				\
-			  test_strsplit 			\
+bin_PROGRAMS 		= test_strsplit 			\
 			  test_exfiles_grp			\
 			  test_exfiles_pwd			\
 			  test_exfiles_util_pwd			\
 			  test_exfiles_util_open
-
-test_strlist_SOURCES 	= test_strlist.c 			\
-			  ../src/strlist.c 			\
-			  ../src/strlist.h
-			  
-test_strlist_LDADD 	= -lcheck
 
 
 test_strsplit_SOURCES	= test_strsplit.c 			\
@@ -52,8 +45,7 @@ test_exfiles_util_open_LDADD = -lcheck
 
 AM_CPPFLAGS		= -I$(top_srcdir)/src
 
-TESTS 			= test_strlist 				\
-			  test_strsplit 			\
+TESTS 			= test_strsplit 			\
 			  test_exfiles_grp			\
 			  test_exfiles_pwd			\
 			  test_exfiles_util_pwd			\
