Rename flex & bison symbols
* Rename flex & bison symbols by replacing 'yy' prefix with '_nss_exfiles_'.
  This ensures that it will not collide with any other yacc/bison parsers used in
  client code.

* Had to rename output file for flex back to default 'lex.yy.c', otherwise
  auto{make,conf} cannot find it. Was unable to find a better way to handle this.

* Also removed 'main' from conf_parser.y; we will use a separate test driver now.

* Also enabled debugging for parser.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,4 +15,5 @@ libnss_exfiles_la_SOURCES = conf_parser.y 		\
 
 libnss_exfiles_la_LDFLAGS = -version-info 2:0:0
 
-AM_YFLAGS = -d
+AM_YFLAGS = -d --name-prefix=_nss_exfiles_
+AM_LFLAGS = -P_nss_exfiles_
