--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ tests/test_exfiles_pwd
 tests/test_exfiles_util_open
 tests/test_exfiles_util_pwd
 tests/test_strsplit
+tests/test_strlist
+tests/test_parser
