Reworking of strlist build
* Moved strlist to libtool convenience library in an attempt at
  minimizing dependency duplication between tests/ and src/.

* Had to add libpthread because sem_* needs it. Planning to look into
  traditional SysV semaphores to prevent having to link with libpthread,
  which seems like a bad thing for low-level library like this to do.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES 	= libnss_exfiles.la
-libnss_exfiles_la_SOURCES = conf_parser.y 		\
-			    conf_lexer.l 		\
-			    exfiles-util.c		\
+noinst_LTLIBRARIES	= libstrlist.la
+
+libnss_exfiles_la_SOURCES = exfiles-util.c		\
 			    exfiles-util.h		\
 			    exfiles-util-grp.c		\
 			    exfiles-util-grp.h		\
@@ -11,10 +11,14 @@ libnss_exfiles_la_SOURCES = conf_parser.y 		\
 			    nss_exfiles_pwd.c 		\
 			    nss_exfiles.h 		\
 			    strsplit.c 			\
-			    strsplit.h 			\
-			    strlist.c 			\
-			    strlist.h 
+			    strsplit.h
+
+libnss_exfiles_la_LIBADD = libstrlist.la
+
 libnss_exfiles_la_LDFLAGS = -version-info 2:0:0
+
+libstrlist_la_SOURCES = strlist.c strlist.h
+libstrlist_la_LIBADD = -lpthread
 
 AM_YFLAGS = -d --name-prefix=_nss_exfiles_
 AM_LFLAGS = -P_nss_exfiles_
