Improved test_parser target
* Added libexfiles-conf-parser.la to src/Makefile.am to make a convenience
library against which to link test_parser.

* Unfortunately, I still seem to have to manually rebuild
libexfiles-conf-parser.la instead of having 'make test_parser" build it. Oh
well; I don't really feel like pissing away my time on Automake.

* Removed -lpthread linkage for libstrlist.la.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES 	= libnss_exfiles.la
-noinst_LTLIBRARIES	= libstrlist.la
+noinst_LTLIBRARIES	= libstrlist.la libexfiles-conf-parser.la
 
 libnss_exfiles_la_SOURCES = exfiles-util.c		\
 			    exfiles-util.h		\
@@ -13,12 +13,16 @@ libnss_exfiles_la_SOURCES = exfiles-util.c		\
 			    strsplit.c 			\
 			    strsplit.h
 
-libnss_exfiles_la_LIBADD = libstrlist.la
+libnss_exfiles_la_LIBADD = libstrlist.la libexfiles-conf-parser.la
 
 libnss_exfiles_la_LDFLAGS = -version-info 2:0:0
 
 libstrlist_la_SOURCES = strlist.c strlist.h
-libstrlist_la_LIBADD = -lpthread
+
+libexfiles_conf_parser_la_SOURCES = exfiles-conf-parser.c \
+				    exfiles-conf-parser.h
+
+libexfiles_conf_parser_la_LIBADD = libstrlist.la
 
 AM_YFLAGS = -d --name-prefix=_nss_exfiles_
 AM_LFLAGS = -P_nss_exfiles_
