Don't add libstrlist to libnss_exfiles since it's already linked in with libexfiles-conf-parser (maybe this isn't the best way to do this)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,7 +13,7 @@ libnss_exfiles_la_SOURCES = exfiles-util.c		\
 			    strsplit.c 			\
 			    strsplit.h
 
-libnss_exfiles_la_LIBADD = libstrlist.la libexfiles-conf-parser.la
+libnss_exfiles_la_LIBADD = libexfiles-conf-parser.la
 
 libnss_exfiles_la_LDFLAGS = -version-info 2:0:0
 
