Update automake and test file names for strlist -> fnodelist

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES 	= libnss_exfiles.la
-noinst_LTLIBRARIES	= libstrlist.la libexfiles-conf-parser.la
+noinst_LTLIBRARIES	= libexfiles-conf-parser.la
 
 libnss_exfiles_la_SOURCES = exfiles-util.c		\
 			    exfiles-util.h		\
@@ -9,6 +9,8 @@ libnss_exfiles_la_SOURCES = exfiles-util.c		\
 			    exfiles-util-pwd.h		\
 			    fnode.c			\
 			    fnode.h			\
+			    fnodelist.c			\
+			    fnodelist.h			\
 			    nss_exfiles_grp.c		\
 			    nss_exfiles_pwd.c 		\
 			    nss_exfiles.h 		\
@@ -25,4 +27,3 @@ libstrlist_la_SOURCES = strlist.c strlist.h
 libexfiles_conf_parser_la_SOURCES = exfiles-conf-parser.c \
 				    exfiles-conf-parser.h
 
-libexfiles_conf_parser_la_LIBADD = libstrlist.la
