Added tests for fnode

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,6 @@ tests/test_exfiles_util_open
 tests/test_exfiles_util_pwd
 tests/test_strsplit
 tests/test_fnodelist
+tests/test_fnode
 tests/test_parser
 src/exfiles-conf-parser
