--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
 before_install:
     - sudo apt-get update -qq
 install:
-    - sudo apt-get install -qq check
+    - sudo apt-get install -qq check pkg-config
 before_script:
     - config/bootstrap
 script: ./configure && make && make check
